add icons, basic layout

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,41 @@
 body {
-  background-color: black;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  background-color: rgb(49, 46, 136);
   color: white;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+}
+
+.icon {
+  height: 32px;
+}
+
+.header, .about, .projects, .contact {
+  height: 300px
+}
+
+.about, .projects, .contact, form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
 }
