--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   display: flex;
   flex-direction: column;
   margin: 0;
   font-family: 'Titillium Web', sans-serif;
-  background-color: rgba(1, 16, 50, 0.954);
+  background-color: rgb(1, 16, 50);
   color: white;
 }
 
@@ -60,7 +64,7 @@ p {
 
 a {
   text-decoration: none;
-  color: white;
+  color: rgb(0, 132, 255);
 }
 
 .icon {
@@ -99,6 +103,11 @@ a {
   height: 180px;
   border-radius: 50%;
   margin: 3vmin 8vmin;
+  border: 1.5px solid rgba(0, 132, 255, 0.804);
+}
+
+.description > h3 {
+  color: rgb(0, 132, 255);
 }
 
 .description > h3, p {
@@ -106,9 +115,22 @@ a {
 }
 
 .projects {
+  position: relative;
   height: 60%;
   width: 100%;
-  background-image: url(/assets/background2.jpg)
+}
+
+.projects::after{
+  content: "";
+  background-image: url(/assets/background2.jpg);
+  background-size: cover;
+  opacity: 0.4;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  z-index: -1;
 }
 
 .project-tiles {
@@ -127,20 +149,21 @@ a {
   height: 400px;
   width: 350px;
   margin: 5vmin;
-  background-color: rgba(240, 248, 255, 0.43);
+  background-color: rgba(1, 16, 50, 0.705);
   border-radius: 3vmin;
-  box-shadow: 5px 5px black;
+  border: 1.5px solid rgba(0, 132, 255, 0.804);
+  box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.446);
 }
 
 .project-container > img {
   width: 95%;
   margin: 1vmin;
   border-radius: 2vmin;
-  border: solid black 1.5px;
+  border: 1px solid rgba(0, 132, 255, 0.804);
 }
 
 .project-container > p {
-  margin: 1vmin 2vmin;
+  margin: 1vmin 2vmin 0 2vmin;
   text-align: justify;
   font-size: .8em;
 }
@@ -152,17 +175,31 @@ a {
 form {
   justify-content: space-evenly;
   height: 300px;
-  width: 250px;
+  width: 400px;
 }
 
 form > input, textarea {
   width: 100%;
   height: 2em;
-  border: 1.5px solid rgba(0, 132, 255, 0.804);
-  border-radius: 3px;
+  border: 2px solid rgba(0, 132, 255, 0.804);
+  border-radius: 1vmin;
+  font-family: 'Titillium Web', sans-serif;
+  padding: 2vmin;
+  box-shadow: 4px 4px 5px 1px rgba(0, 132, 255, 0.254);
 }
 
 textarea {
   height: 10em;
   font-family: 'Titillium Web', sans-serif;
+}
+
+button {
+  border-radius: 0;
+  padding: 5px 10px;
+  background-color: rgb(0, 132, 255);
+  border: none;
+  color: white;
+  font-family: 'Titillium Web', sans-serif;
+  font-weight: 300;
+  cursor: pointer;
 }
