--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ body {
 nav {
   display: flex;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+  background-color: rgba(1, 16, 50, 0.698);
 }
 
 ul {
