--- a/css/style.css
+++ b/css/style.css
@@ -173,9 +173,13 @@ a {
   box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.446);
 }
 
+.overlay-container {
+  position: relative;
+}
+
 .overlay-container > img {
   width: 95%;
-  margin: 1vmin;
+  margin: 2.5%;
   border-radius: 2vmin;
   border: 1px solid rgba(0, 132, 255, 0.804);
 }
