--- a/css/style.css
+++ b/css/style.css
@@ -177,14 +177,25 @@ a {
   position: relative;
 }
 
-.overlay-container > img {
+.project-img {
   width: 95%;
   margin: 2.5%;
   border-radius: 2vmin;
   border: 1px solid rgba(0, 132, 255, 0.804);
+  opacity: 1;
+  display: block;
+  transition: .5s ease;
+  backface-visibility: hidden;
 }
 
 .stack {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -250,6 +261,14 @@ button {
 
 .icon-links > a {
   margin: 0 1vmin;
+}
+
+.overlay-container:hover .project-img {
+  opacity: 0.3;
+}
+
+.overlay-container:hover .stack {
+  opacity: 1;
 }
 
 @media only screen and (min-width: 768px) {
