--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,7 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+  width: 95%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -210,6 +211,11 @@ a {
 .icons > img {
   height: 48;
   margin: 5px;
+}
+
+.devicon-django-plain {
+  font-size: 48px;
+  line-height: 60px;
 }
 
 .project-container > a {
@@ -264,11 +270,16 @@ button {
 }
 
 .overlay-container:hover .project-img {
-  opacity: 0.3;
+  opacity: 0.2;
 }
 
 .overlay-container:hover .stack {
   opacity: 1;
+}
+
+.project-container:hover {
+  border: 1.5px solid rgb(94, 177, 255);
+  box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.847);
 }
 
 @media only screen and (min-width: 768px) {
