--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,11 @@ h4 {
   letter-spacing: .1rem;
   font-weight: 300;
   margin: 1vmin;
+  padding: .2vmin 4vmin;
+  border-radius: 1vmin;
+  border: 1.5px solid rgba(0, 132, 255, 0.804);
+  background-color: rgba(254, 255, 255, 0.146);
+  transition: all .5s ease;
 }
 
 p {
@@ -277,9 +282,11 @@ button {
   opacity: 1;
 }
 
-.project-container:hover {
+h4:hover {
+  color: rgb(94, 177, 255);
   border: 1.5px solid rgb(94, 177, 255);
-  box-shadow: 4px 4px 5px 2px rgba(0, 0, 0, 0.847);
+  box-shadow: 4px 4px 5px 1px rgba(0, 132, 255, 0.254);
+  background-color: rgba(254, 255, 255, 0.233);
 }
 
 @media only screen and (min-width: 768px) {
