adjustments for viewing on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ h2 {
   font-size: calc(1.5rem + 1vw);
   letter-spacing: .1em;
   margin: 2vmin;
+  margin-top: 6vmin;
 }
 
 h3 {
@@ -60,7 +61,6 @@ h4 {
   font-weight: 300;
   margin: 1vmin;
   padding: .2vmin 4vmin;
-  border-radius: 1vmin;
   border: 1.5px solid rgba(0, 132, 255, 0.804);
   background-color: rgba(254, 255, 255, 0.146);
   transition: all .5s ease;
@@ -88,11 +88,7 @@ a {
   margin: 0 2vmin;
 }
 
-.header, .about {
-  height: 20%;
-}
-
-.contact {
+.header, .about, .contact {
   height: 15%;
 }
 
@@ -107,6 +103,7 @@ a {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  height: 18%;
 }
 
 .header {
@@ -170,7 +167,7 @@ a {
   justify-content: space-between;
   align-items: center;
   height: 400px;
-  width: 350px;
+  max-width: 350px;
   margin: 5vmin;
   background-color: rgba(1, 16, 50, 0.705);
   border-radius: 3vmin;
@@ -240,7 +237,7 @@ a {
 form {
   justify-content: space-evenly;
   height: 300px;
-  min-width: 40vw;
+  min-width: 50vw;
   margin: 0;
 }
 
@@ -308,8 +305,4 @@ h4:hover {
     flex-direction: row;
     flex-wrap: nowrap;
   }
-}
-
-@media only screen and (min-width: 1024px) {
-
 }
