resize and add clarification text for links to projects

--- a/css/style.css
+++ b/css/style.css
@@ -74,18 +74,18 @@ p {
 }
 
 a {
-  font-size: calc(.8rem + .5vw);
   text-decoration: none;
-  color: white;
 }
 
 .icon-link {
-  height: 28px;
+  height: 48px;
   margin-top: 1vmin;
 }
 
-.page-links > li {
-  margin: 0 2vmin;
+.page-links > li > a {
+  color: white;
+  margin: 0;
+  font-size: calc(1rem + .5vw);
 }
 
 .header, .about, .contact {
@@ -166,7 +166,6 @@ a {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  max-height: 525px;
   max-width: 400px;
   margin: 5vmin;
   background-color: rgba(1, 16, 50, 0.705);
@@ -292,6 +291,12 @@ h4:hover {
     height: 25%;
   }
 
+  .page-links > li > a {
+    color: white;
+    margin: 0 2vmin;
+    font-size: calc(1rem + .5vw);
+  }
+
   .image > img {
     margin: 3vmin 8vmin;
     height: 25vw;
@@ -308,6 +313,7 @@ h4:hover {
   }
 
   .project-container {
-    max-width: 40%;
+    height: 50%;
+    max-width: 35%;
   }
 }
