--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ h4 {
 }
 
 p {
-  font-size: calc(.5rem + 1vw);
+  font-size: calc(.7rem + 1vw);
   letter-spacing: .07em;
   font-weight: 300;
   text-align: justify;
@@ -89,7 +89,7 @@ a {
 }
 
 .header, .about, .contact {
-  height: 15%;
+  height: 20%;
 }
 
 .about, .projects, .contact, form {
@@ -238,12 +238,14 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 100%;
+  width: 95%;
 }
 
 .website-icon {
+  height: 38px;
   border: 2px solid rgba(94, 177, 255, 0);
   border-radius: 50%;
+  margin-bottom: 1vmin;
 }
 
 form {
@@ -306,6 +308,10 @@ h4:hover {
 @media only screen and (min-width: 768px) {
   .header, .about, .contact {
     height: 25%;
+  }
+
+  .website-icon {
+    height: 48px;
   }
 
   .icon-link {
