style links to project sites

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ h3 {
   letter-spacing: .1em;
 }
 
-h4 {
+/* h4 {
   font-size: 1.2rem;
   letter-spacing: .1rem;
   font-weight: 300;
@@ -65,8 +65,8 @@ h4 {
   border: 1.5px solid rgba(0, 132, 255, 0.804);
   border-radius: 10px;
   background-color: rgba(254, 255, 255, 0.146);
-  transition: all .5s ease;
-}
+  transition: all .5s ease; */
+/* } */
 
 p {
   font-size: calc(.7rem + 1vw);
@@ -92,6 +92,10 @@ a {
 
 .header, .about, .contact {
   height: 20%;
+}
+
+.contact {
+  height: 15%;
 }
 
 .about, .projects, .contact, form {
@@ -240,7 +244,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 100%;
+  width: 95%;
 }
 
 .website-icon {
@@ -252,7 +256,7 @@ a {
 
 form {
   justify-content: space-evenly;
-  height: 300px;
+  height: 350px;
   min-width: 50vw;
   margin: 0;
 }
@@ -273,15 +277,22 @@ textarea {
   font-family: 'Titillium Web', sans-serif;
 }
 
-button {
+button, h4 {
   border-radius: 0;
-  padding: 5px 10px;
-  background-color: rgb(0, 132, 255);
-  border: none;
+  padding: 1vmin 2vmin;
+  background-color: rgba(0, 132, 255, 0.798);
+  border: 1.5px solid rgba(0, 132, 255, 0.804);
   color: white;
   font-family: 'Titillium Web', sans-serif;
   font-weight: 300;
+  font-size: 16px;
+  letter-spacing: .1rem;
   cursor: pointer;
+  transition: all .5s ease;
+}
+
+.icon-links {
+  margin-top: auto;
 }
 
 .icon-links > a {
@@ -296,7 +307,7 @@ button {
   opacity: 1;
 }
 
-h4:hover {
+h4:hover, button:hover {
   color: rgb(94, 177, 255);
   border: 1.5px solid rgb(94, 177, 255);
   box-shadow: 4px 4px 5px 1px rgba(0, 132, 255, 0.254);
